# dixous-forum

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  diesel.toml  dixous-forum.db  input.css  package-lock.json
.lapce/: run.toml
assets/: tailwind.css
migrations/2025-02-26-104133_create_threads/: down.sql  up.sql
src/: main.rs  schema.rs
src/components/: input_field.rs  mod.rs  navbar.rs
src/database/: mod.rs  models.rs  sqlite.rs
src/views/: create_thread.rs  home.rs  mod.rs  threads_view.rs
